<resources>
    <string name="app_name">HZAUHelper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="account_setting">设置账号</string>
    <string name="please_input_account">在这里输入学号</string>
    <string name="please_input_password_jw">教务系统密码</string>
    <string name="please_input_password_lib">图书馆密码，默认密码为出生年月日，如19700101</string>
    <string name="please_input_password_pe">体育系统密码，默认密码为6个8</string>
    <string name="exam_plan">考试安排</string>
    <string name="exam_time">考试时间:</string>
    <string name="exam_place">考试地点:</string>
    <string name="seat_num">座位号:</string>
    <string name="empty_room">空教室查询</string>
    <string name="query">查询</string>
    <string name="search">搜索</string>
    <string name="query_book">馆藏查询</string>
    <string name="book_history">借阅历史</string>
    <string name="library">图书馆</string>
    <string name="jw">教务系统</string>
    <string name="pe">体育系统</string>
    <string name="query_southlake">南湖跑查询</string>
    <string name="exit">退出</string>
    <string name="more">更多</string>
</resources>
